// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<div>
  <button
    class="btn btn-primary"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button renders ClayButtonWithIcon 1`] = `
<div>
  <button
    aria-label="Delete"
    class="btn btn-monospaced btn-primary"
    type="button"
  >
    <svg
      class="lexicon-icon lexicon-icon-trash"
      role="presentation"
    >
      <use
        href="/some/path#trash"
      />
    </svg>
  </button>
</div>
`;

exports[`Button renders ClayButtonWithIcon without monospaced 1`] = `
<div>
  <button
    aria-label="Delete"
    class="btn btn-primary"
    type="button"
  >
    <svg
      class="lexicon-icon lexicon-icon-trash"
      role="presentation"
    >
      <use
        href="/some/path#trash"
      />
    </svg>
  </button>
</div>
`;

exports[`Button renders a ButtonGroup with spaced 1`] = `
<div>
  <div
    class="btn-group-spaced"
    role="group"
  >
    <button
      class="btn btn-primary"
      type="button"
    >
      Button
    </button>
    <button
      class="btn btn-primary"
      type="button"
    >
      Button
    </button>
  </div>
</div>
`;

exports[`Button renders block 1`] = `
<div>
  <button
    class="btn btn-block btn-primary"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button renders borderless 1`] = `
<div>
  <button
    class="btn btn-outline-borderless btn-outline-primary"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button renders dark and translucent 1`] = `
<div>
  <button
    class="btn btn-translucent clay-dark btn-info"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button renders disabled 1`] = `
<div>
  <button
    class="btn btn-primary"
    disabled=""
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button renders displayType="ai" 1`] = `
<div>
  <button
    class="btn btn-ai rounded-pill"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button renders displayType="beta" as info and translucent 1`] = `
<div>
  <button
    class="btn btn-translucent btn-info"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button renders displayType="beta-dark" as dark, info and translucent 1`] = `
<div>
  <button
    class="btn btn-translucent clay-dark btn-info"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button renders monospaced 1`] = `
<div>
  <button
    class="btn btn-monospaced btn-primary"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button renders outline 1`] = `
<div>
  <button
    class="btn btn-outline-primary"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button renders outline displayType="ai" 1`] = `
<div>
  <button
    class="btn btn-outline-ai rounded-pill"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button renders small 1`] = `
<div>
  <button
    class="btn btn-sm btn-primary"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button renders translucent 1`] = `
<div>
  <button
    class="btn btn-translucent btn-info"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button renders with a ButtonGroup 1`] = `
<div>
  <div
    class="btn-group"
    role="group"
  >
    <button
      class="btn btn-primary"
      type="button"
    >
      Button
    </button>
  </div>
</div>
`;

exports[`Button renders with a different display type 1`] = `
<div>
  <button
    class="btn btn-link"
    type="button"
  >
    Button
  </button>
</div>
`;
